# AI_02_06

./: .cursorrules  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  GEMINI.md  PLAN.md  PLAN_DRUG_DB_INGEST.md  PLAN_OCR_DRAFT.md  QA_AUDIT_PLAN.md  README.md  SYSTEM_DESIGN.md  WORKFLOW.md  create_fake_user.py  docker-compose.prod.yml  docker-compose.yml  env.ps1  env.sh  package-lock.json  pyproject.toml  테스트 계획.md
.github/: PULL_REQUEST_TEMPLATE.md  commit_template.txt
.github/workflows/: checks.yml  deploy.yml
ai_worker/: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.prod  GEMINI.md  REFACTOR_PLAN.md  main.py  service.py
ai_worker/core/: __init__.py  config.py  logger.py  openai_client.py  redis_client.py  redis_retry.py  rq_result_publisher.py  text_helpers.py
ai_worker/data/: interaction_tags.json  medicines.json
ai_worker/providers/: embedding.py  llm.py  router.py
ai_worker/tasks/: compact_tasks.py  embedding_tasks.py  ocr_tasks.py  rag_tasks.py  tool_tasks.py
ai_worker/utils/: chunker.py  image_preprocessor.py  ocr.py  rag.py  tagger.py  text_postprocessor.py
app/: AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.prod  GEMINI.md  main.py
app/core/: __init__.py  config.py  logger.py  redis_client.py
app/db/: databases.py  vector_field.py
app/dependencies/: security.py
app/dtos/: __init__.py  base.py  challenge.py  chat_session.py  drug_info.py  intake_log.py  intent.py  lifestyle_guide.py  medication.py  medicine_search.py  message.py  oauth.py  ocr.py  prescription_group.py  profile.py  query_rewriter.py  rag.py  recall.py  tools.py
app/middlewares/: rate_limit.py  security.py
app/models/: accounts.py  challenge.py  chat.py  chat_sessions.py  daily_symptom_log.py  data_sync_log.py  drug_interaction_cache.py  drug_interactions_cache.py  drug_recall.py  intake_log.py  lifestyle_guide.py  llm_response_cache.py  medication.py  medicine_chunk.py  medicine_info.py  medicine_ingredient.py  message_feedbacks.py  messages.py  ocr_draft.py  prescription_group.py  profiles.py  prompt_semantic_cache.py  push_tokens.py  refresh_tokens.py  users.py  vector_models.py
app/queues/: rq.py
app/repositories/: account_repository.py  challenge_repository.py  chat_session_repository.py  daily_symptom_log_repository.py  drug_recall_repository.py  intake_log_repository.py  lifestyle_guide_repository.py  medication_repository.py  medicine_info_repository.py  medicine_ingredient_repository.py  message_repository.py  ocr_draft_repository.py  prescription_group_repository.py  profile_repository.py  refresh_token_repository.py
app/schemas/: challenge.py  intake_log.py  medication.py
app/services/: challenge_service.py  chat_session_service.py  chunking_service.py  daily_symptom_log_service.py  drug_recall_service.py  embedding_service.py  intake_log_service.py  lifestyle_guide_prompt_builder.py  lifestyle_guide_service.py  medication_service.py  medicine_data_service.py  medicine_doc_parser.py  medicine_search_service.py  message_service.py  oauth.py  ocr_service.py  prescription_group_service.py  profile_service.py  rag_service.py  rate_limiter.py  recall_alert_builder.py  recall_notification_service.py  vector_search_service.py
app/tests/: conftest.py  test_ai_worker_embedding_provider.py  test_ai_worker_rag_dispatch.py  test_ai_worker_rag_tasks.py  test_ai_worker_router_provider.py  test_ai_worker_tool_tasks.py  test_app.py  test_chat_session_medication_removal.py  test_chat_session_service.py  test_company_name_normalizer.py  test_drug_recall_model.py  test_drug_recall_repository.py  test_drug_recall_service.py  test_fetch_sample_script.py  test_hospital_search.py  test_hybrid_retriever_chunk.py  test_hybrid_retriever_medicine.py  test_intent_classifier.py  test_kakao_client.py  test_lifestyle_guide_router_no_meds.py  test_medication_create_recall_check.py  test_medication_service_recall_hook.py  test_medication_service_recall_status_batch.py  test_medicine_chunk_model.py  test_medicine_data_service_transform.py  test_medicine_doc_parser.py  test_medicine_info_model.py  test_medicine_ingredient_model.py  test_message_metadata.py  test_message_routers_tools.py  test_message_service_location_search.py  test_message_service_pending_callback.py  test_message_service_recall_check.py  test_message_service_tool_branching.py  test_models.py  test_oauth.py  test_oauth_self_profile.py  test_ocr_save_recall_hook.py  test_pending_turn_store.py  test_profile_relation_v2.py  (+29 more)
app/utils/: common.py  company_name_normalizer.py  medicine_filters.py  product_name_normalizer.py  security.py
app/validators/: common.py  secure_types.py
app/workers/: __init__.py  intake_log_worker.py  medication_worker.py  ocr_cleanup_worker.py  recall_sync_worker.py  scheduler.py
docs/: 01_DB_MIGRATION_GUIDE.md  02_ENV_AND_CICD_GUIDE.md  03_DATABASE_GUIDE.md  AI_FEATURE_ANALYSIS.md  API설명.md  ARCHITECTURE_KR.md  DEPLOY_EC2.md  DEPLOY_VERCEL.md  FE설명.md  FLOWCHART.md  FLOWCHART_ADVANCED.md  FLOWCHART_FEATURES.md  GITHUB_SECRETS_SETUP.md  INTEGRATION_STATUS.md  MIGRATIONS_NORMALIZATION.md  OCR_FLOW.md  PLAN.md  PROJECT_STRUCTURE_REPORT.md  RAG_FLOW.md  RAG_PIPELINE_IMPLEMENTATION.md  README.md  SYSTEM_DESIGN_KR.md  chatbot_flow.md  db_schema.dbml  improvement_roadmap.md  merge_log.md  migration설명.md  project_structure_analysis.md  remote_db_access.md  router-service-repository.md  scenario.md  security_enhancement_plan.md  setup_server.sh  system_overview.md  tool_calling_flow.md  로그인흐름.md  보안.md
envs/: README.md  example.local.env  example.prod.env  local.env
medication-frontend/: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  DESIGN_SYSTEM.md  Dockerfile  Dockerfile.prod  FRONTEND_VIBE_AGENT.md  GEMINI.md  README.md  next.config.mjs  package-lock.json  package.json  server_log.txt  tsconfig.json
nginx/: default.conf  prod_http.conf  prod_https.conf
scripts/: create_fake_user.py  deployment.sh  embed_medicine_chunks.py  seed_rag_data.py  switch-env.ps1  switch-env.sh
scripts/ci/: check_mypy.sh  (+3 more)
(+235 files in other folders)
