[project]
name = "ai-health-example"
version = "0.1.0"
description = "AI 헬스케어 파이널 프로젝트 예시용"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "rq>=2.7.0",           # AI Worker와 Backend 공통 핵심 의존성으로 승격
    "redis>=7.1.0",        # RQ의 브로커 역할을 위해 필수
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "httpx>=0.28.1",
    "requests>=2.33.1",
    "bleach>=6.3.0",
    "cryptography>=46.0.3",
    "python-dateutil>=2.9.0.post0",
    "tomlkit>=0.14.0",
    "tzdata>=2024.1",
    "myapplication>=0.1.0",
]

[dependency-groups]
ai = [
    "scikit-learn>=1.8.0",
    "torch",
    "torchvision",
    "sentence-transformers>=5.2.0",
]
app = [
    "aerich>=0.9.2",
    "asyncpg>=0.30.0",
    "bcrypt<=4.0.1",
    "fastapi[standard]>=0.128.0",
    "openai>=1.0.0",
    "orjson>=3.11.5",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.10.1",
    "tortoise-orm>=0.25.3",
    "uvicorn>=0.40.0",
    # "rq>=2.7.0" -> 상단 dependencies로 이동되었으므로 여기서 제거됨
]
dev = [
    "bandit>=1.7.0",
    "coverage>=7.13.2",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.14",
    "types-passlib>=1.7.7.20250602",
    "types-python-dateutil>=2.9.0.20260124",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[tool.aerich]
tortoise_orm = "app.db.databases.TORTOISE_ORM"
location = "app/db/migrations"
src_folder = "./."

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C90", "B", "UP", "N"]
ignore = ["UP046", "E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"db/migrations/*" = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.bandit]
exclude_dirs = ["tests", "app/db/migrations"]
skips = ["B101", "B311"]

[tool.mypy]
python_version = "3.13"
pretty = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["app.models.*", "app.db.migrations.*"]
ignore_errors = true