[project]
name = "ai-health-example"
version = "0.1.0"
description = "AI 헬스케어 파이널 프로젝트 예시용"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "rq>=2.7.0",           # AI Worker와 Backend 공통 핵심 의존성으로 승격
    "redis>=7.1.0",        # RQ의 브로커 역할을 위해 필수
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "openai>=1.0.0",
    "httpx>=0.28.1",
    "requests>=2.33.1",
    "bleach>=6.3.0",
    "cryptography>=46.0.3",
    "python-dateutil>=2.9.0.post0",
    "tomlkit>=0.14.0",
    "tzdata>=2024.1",
]

[dependency-groups]
ai = [
    "scikit-learn>=1.8.0",
    "torch",
    "torchvision",
    "sentence-transformers>=5.2.0",
    "numpy>=2.0.0",
    "psycopg2-binary>=2.9.0",  # pgvector support
    "tqdm>=4.67.0",            # batch seeding progress display
]
app = [
    "aerich>=0.9.2",
    "apscheduler>=3.10.0",
    "asyncpg>=0.30.0",
    "bcrypt<=4.0.1",
    "fastapi[standard]>=0.128.0",
    "numpy>=2.0.0",
    "orjson>=3.11.5",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.10.1",
    "sentence-transformers>=5.2.0",
    "tortoise-orm>=0.25.3",
    "uvicorn>=0.40.0",
]
dev = [
    "bandit>=1.7.0",
    "coverage>=7.13.2",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.14",
    "types-passlib>=1.7.7.20250602",
    "types-python-dateutil>=2.9.0.20260124",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[tool.aerich]
tortoise_orm = "app.db.databases.TORTOISE_ORM"
location = "app/db/migrations"
src_folder = "./."

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[tool.ruff]
line-length = 120
target-version = "py313"
# Exclude auto-generated and migration files
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "app/db/migrations",
]

[tool.ruff.lint]
# Enable comprehensive rule sets for 2025-2026 standards
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "D",      # pydocstyle
    "UP",     # pyupgrade
    "YTT",    # flake8-2020
    "ANN",    # flake8-annotations
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit
    "BLE",    # flake8-blind-except
    "FBT",    # flake8-boolean-trap
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "EXE",    # flake8-executable
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "INP",    # flake8-no-pep420
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PYI",    # flake8-pyi
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SLOT",   # flake8-slots
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TC",     # flake8-type-checking (renamed from TCH in ruff 0.6.0+)
    "INT",    # flake8-gettext
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "TD",     # flake8-todos
    "FIX",    # flake8-fixme
    "ERA",    # eradicate
    "PGH",    # pygrep-hooks
    "PL",     # Pylint
    "TRY",    # tryceratops
    "FLY",    # flynt
    "PERF",   # Perflint
    "FURB",   # refurb
    "LOG",    # flake8-logging
    "RUF",    # Ruff-specific rules
]

# Ignore specific rules that conflict with project needs
ignore = [
    # Documentation
    "D100",    # Missing docstring in public module
    "D101",    # Missing docstring in public class
    "D102",    # Missing docstring in public method
    "D103",    # Missing docstring in public function
    "D104",    # Missing docstring in public package
    "D105",    # Missing docstring in magic method
    "D106",    # Missing docstring in public nested class (Tortoise Meta)
    "D107",    # Missing docstring in __init__
    "D203",    # 1 blank line before class docstring (conflicts with D211)
    "D205",    # 1 blank line between summary and description (한국어 docstring 호환)
    "D213",    # Multi-line summary at second line (conflicts with D212)
    "D415",    # First line should end with punctuation (한국어 docstring 호환)

    # Annotations
    "ANN003",  # Missing type annotation for **kwargs
    "ANN204",  # Missing return type for special method (__init__)
    "ANN401",  # Dynamically typed expressions (Any) are disallowed

    # Security (false positives, handled by bandit separately)
    "S101",    # Use of assert detected
    "S105",    # Possible hardcoded password (false positive on config defaults)
    "S108",    # Probable insecure temp file usage (false positive)
    "S311",    # Standard pseudo-random generators

    # Style preferences
    "COM812",  # Trailing comma missing (handled by formatter)
    "ISC001",  # Implicit string concat on one line (handled by formatter)

    # Boolean trap (FastAPI Query/Form params require bool args)
    "FBT001",  # Boolean positional arg in function definition
    "FBT002",  # Boolean default positional arg
    "FBT003",  # Boolean positional value in function call

    # FastAPI / framework specific
    "B008",    # Function calls in argument defaults (FastAPI Depends)
    "BLE001",  # Blind exception catch (needed for top-level handlers)
    "PLC0415", # Import not at top-level (circular import prevention)

    # Exception messages (overly strict for application code)
    "EM101",   # Exception must not use string literal
    "EM102",   # Exception must not use f-string literal
    "TRY003",  # Long messages outside exception class
    "TRY300",  # Consider moving return to else block
    "TRY400",  # Use logging.exception instead of logging.error

    # Logging
    "G004",    # Logging uses f-string (f-string is more readable)

    # Return style
    "RET504",  # Unnecessary assignment before return (useful for debugging)

    # Pylint specific (too strict)
    "PLR0913", # Too many arguments
    "PLR2004", # Magic value in comparison
    "PLW0602", # Global without assignment
    "PLW0603", # Using global statement (needed for signal handlers)
    "PLW2901", # Loop variable overwritten

    # Performance (false positives)
    "PERF203", # try-except in loop

    # Project structure
    "INP001",  # Implicit namespace package (intentionally no __init__.py)
    "TD002",   # Missing author in TODO
    "TD003",   # Missing issue link for TODO
    "FIX002",  # Line contains TODO

    # Eradicate (too many false positives on comments)
    "ERA001",  # Found commented-out code

    # Tortoise ORM / Pydantic class patterns
    "RUF012",  # Mutable class attribute default (Tortoise Meta.indexes)

    # Type checking
    "TC001",   # Move app import into TYPE_CHECKING block
    "TC002",   # Move third-party import into TYPE_CHECKING block
    "TC003",   # Move stdlib import into TYPE_CHECKING block
]

# Specific ignores per file type
[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",    # Imported but unused
    "F403",    # Star imports
    "D104",    # Missing docstring in public package
]
"app/db/migrations/*" = ["ALL"]  # Ignore all rules in migrations
"tests/*" = [
    "S101",    # Use of assert detected (normal in tests)
    "D",       # Missing docstrings (not required in tests)
    "ANN",     # Missing annotations (not required in tests)
    "PLR2004", # Magic value used in comparison (normal in tests)
    "SLF001",  # Private member accessed (normal in tests)
]
"app/tests/*" = [
    "S101",    # Use of assert detected (normal in tests)
    "D",       # Missing docstrings (not required in tests)
    "ANN",     # Missing annotations (not required in tests)
    "PLR2004", # Magic value used in comparison (normal in tests)
    "SLF001",  # Private member accessed (Tortoise _meta introspection)
]
"scripts/*" = [
    "T201",    # print found (normal in scripts)
    "S602",    # subprocess call with shell=True
    "S603",    # subprocess call without shell=True
    "BLE001",  # Blind exception catch
]
"app/repositories/medication_repository.py" = [
    "DTZ011",  # date.today() usage (existing code, refactor separately)
]
"app/services/ocr_service.py" = [
    "F811",    # redefined import (existing code, refactor separately)
    "ASYNC230", # blocking open in async (existing code)
    "PTH123",  # open() vs Path.open() (existing code)
    "E501",    # line too long in prompt strings (existing code)
]
"app/tests/test_oauth.py" = [
    "ANN201",  # Missing return type in test functions (existing code)
]
"ai_worker/utils/rag.py" = [
    "T201",    # print for error logging (TODO: replace with proper logging)
]
"ai_worker/*" = [
    "T201",    # print statements allowed in AI worker modules
]
"app/main.py" = [
    "T201",    # print in global exception handler (before logger is available)
]
"app/apis/v1/ocr_routers.py" = [
    "T201",    # print for debug error logging
]
"app/apis/v1/mock_oauth_routers.py" = [
    "ARG001",  # Unused args required by OAuth protocol signature
]
"app/apis/v1/oauth_routers.py" = [
    "ARG001",  # Unused request arg required by FastAPI exception handler signature
]
"app/core/config.py" = [
    "UP007",   # Use X | Y for type annotations (pydantic-settings compatibility)
]

# Import sorting configuration
[tool.ruff.lint.isort]
known-first-party = ["app", "ai_worker"]
known-third-party = ["fastapi", "pydantic", "tortoise", "redis", "openai"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
split-on-trailing-comma = true
force-single-line = false
force-sort-within-sections = true

# Docstring configuration
[tool.ruff.lint.pydocstyle]
convention = "google"

# Pylint configuration
[tool.ruff.lint.pylint]
max-args = 8
max-branches = 15
max-returns = 8
max-statements = 60

# McCabe complexity
[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.format]
# Modern Python formatting standards (2025-2026)
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
# Preview features for cutting-edge formatting
preview = true

[tool.bandit]
exclude_dirs = ["tests", "app/db/migrations"]
skips = ["B101", "B311"]

[tool.mypy]
# Modern Python type checking (2025-2026)
python_version = "3.13"
pretty = true
show_error_codes = true
show_error_context = true
color_output = true
error_summary = true

# Strict type checking
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
warn_return_any = true
warn_unused_configs = true

# Import discovery
namespace_packages = true
explicit_package_bases = true

# Platform configuration
python_executable = "python"

# Cache configuration
cache_dir = ".mypy_cache"
sqlite_cache = true

# Error reporting
show_absolute_path = true
show_column_numbers = true
show_traceback = true

# Warnings
warn_no_return = true
warn_incomplete_stub = true

# Strict optional
strict_optional = true

plugins = [
  "pydantic.mypy"
]

# Per-module overrides
[[tool.mypy.overrides]]
module = [
    "app.models.*",
    "app.db.migrations.*",
    "tests.*"
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "tortoise.*",
    "aerich.*",
    "redis.*",
    "rq.*",
    "passlib.*",
    "bleach.*",
    "requests.*"
]
ignore_missing_imports = true

# Specific module configurations
[[tool.mypy.overrides]]
module = "app.core.config"
# Allow dynamic configuration loading
allow_any_generics = true
allow_subclassing_any = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
